--- a/style.css
+++ b/style.css
@@ -22,3 +22,8 @@ footer{
 p{
     font-size: 25px;
 }
+.box {
+    border-style: solid;
+    border-color: black;
+    border-width: 5px;
+    text-align: center;
