--- a/portfolio/projekte.css
+++ b/portfolio/projekte.css
@@ -156,8 +156,8 @@ body{
     margin-right: 10px;
     margin-top: 150px;
     background-image: url("meineimg/header4.jpg");
-    background-attachment: fixed;
-    background-repeat: repeat;
+   background-size: cover;
+    background-repeat: no-repeat;
   }
  .gallery {
   display: flex;
